style: fix name and HP width to 6ch

--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
       text-align: right;
     }
     .name-label { font-weight:700; margin-bottom:8px; }
-    .hp-wrap { width:100%; height:12px; background:#eee; border-radius:8px; overflow:hidden; }
+  /* 固定幅: 文字数6文字分の幅に調整 */
+  .name-label { font-weight:700; margin-bottom:8px; display:block; }
+  .name-label, .hp-wrap { width: 6ch; max-width: 6ch; box-sizing: border-box; }
+  .name-label { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+  .hp-wrap { height:12px; background:#eee; border-radius:8px; overflow:hidden; }
     .hp-bar { height:100%; background:#4caf50; width:100%; transition: width 700ms ease; }
     .hp-text { font-size:13px; margin-top:6px; }
 
