--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
       grid-column: 2 / 3;
       grid-row: 1 / 2;
       display:flex;
-      justify-content:center;
+      justify-content:flex-end;
       align-items:center;
-      transform: translateX(12px); /* 中央より右寄せ */
+      padding-right: 12px; /* 右側への余白（敵アイコンの右端距離）*/
+      z-index: 2;
     }
     .enemy-icon img { width:100px; height:100px; }
 
@@ -88,9 +89,10 @@
       grid-column: 2 / 3;
       grid-row: 2 / 3;
       display:flex;
-      justify-content:center;
+      justify-content:flex-start;
       align-items:center;
-      transform: translateX(-12px); /* 中央より左寄せ */
+      padding-left: 12px; /* 左側への余白（味方アイコンの左端距離）*/
+      z-index: 2;
     }
     .ally-icon-wrap img { width:100px; height:100px; }
     .ally-namehp {
@@ -106,7 +108,7 @@
     }
     .name-label { font-weight:700; margin-bottom:8px; }
   /* 固定幅: 文字数6文字分の幅に調整 */
-  .name-label { font-weight:700; margin-bottom:8px; display:block; }
+  .name-label { font-weight:700; margin-bottom:8px; display:block; color: #111; }
   .name-label, .hp-wrap { width: 6ch; max-width: 6ch; box-sizing: border-box; }
   .name-label { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
   .hp-wrap { height:12px; background:#eee; border-radius:8px; overflow:hidden; }
@@ -130,8 +132,11 @@
       display:flex;
       align-items:center;
       justify-content:center;
+      z-index: 0; /* 背面に配置 */
     }
     .arrow-svg { width:100%; height:100%; overflow: visible; }
+    /* 前面へ出す */
+    .enemy-namehp, .ally-namehp, .enemy-info, .ally-info, .enemy-icon, .ally-icon-wrap { z-index: 2; position: relative; }
     /* move label background */
     .move-bg { fill: #ffe6d6; stroke: rgba(0,0,0,0.06); }
 
