style: set name and HP width to 12ch (approx. 6 full-width chars)

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
     .name-label { font-weight:700; margin-bottom:8px; }
   /* 固定幅: 文字数6文字分の幅に調整 */
   .name-label { font-weight:700; margin-bottom:8px; display:block; color: #111; }
-  .name-label, .hp-wrap { width: 6ch; max-width: 6ch; box-sizing: border-box; }
+  /* 全角6文字分に相当させるため 12ch を使用（半角幅の2倍） */
+  .name-label, .hp-wrap { width: 12ch; max-width: 12ch; box-sizing: border-box; }
   .name-label { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
   .hp-wrap { height:12px; background:#eee; border-radius:8px; overflow:hidden; }
     .hp-bar { height:100%; background:#4caf50; width:100%; transition: width 700ms ease; }
